--- a/docker-compose-partitions.yml
+++ b/docker-compose-partitions.yml
@@ -1,16 +1,13 @@
-version: '3.9'
+version: '2.1'
 
 services:
   product:
     build: microservices/product-service
+    mem_limit: 512m
     environment:
       - SPRING_PROFILES_ACTIVE=docker,streaming_partitioned,streaming_instance_0
-    deploy:
-      resources:
-        limits:
-          memory: 512m
-        reservations:
-          memory: 512m
+      - CONFIG_SERVER_USR=${CONFIG_SERVER_USR}
+      - CONFIG_SERVER_PWD=${CONFIG_SERVER_PWD}
     depends_on:
       mongodb:
         condition: service_healthy
@@ -19,14 +16,11 @@ services:
 
   product-p1:
     build: microservices/product-service
+    mem_limit: 512m
     environment:
       - SPRING_PROFILES_ACTIVE=docker,streaming_partitioned,streaming_instance_1
-    deploy:
-      resources:
-        limits:
-          memory: 512m
-        reservations:
-          memory: 512m
+      - CONFIG_SERVER_USR=${CONFIG_SERVER_USR}
+      - CONFIG_SERVER_PWD=${CONFIG_SERVER_PWD}
     depends_on:
       mongodb:
         condition: service_healthy
@@ -35,14 +29,11 @@ services:
 
   recommendation:
     build: microservices/recommendation-service
+    mem_limit: 512m
     environment:
       - SPRING_PROFILES_ACTIVE=docker,streaming_partitioned,streaming_instance_0
-    deploy:
-      resources:
-        limits:
-          memory: 512m
-        reservations:
-          memory: 512m
+      - CONFIG_SERVER_USR=${CONFIG_SERVER_USR}
+      - CONFIG_SERVER_PWD=${CONFIG_SERVER_PWD}
     depends_on:
       mongodb:
         condition: service_healthy
@@ -51,14 +42,11 @@ services:
 
   recommendation-p1:
     build: microservices/recommendation-service
+    mem_limit: 512m
     environment:
       - SPRING_PROFILES_ACTIVE=docker,streaming_partitioned,streaming_instance_1
-    deploy:
-      resources:
-        limits:
-          memory: 512m
-        reservations:
-          memory: 512m
+      - CONFIG_SERVER_USR=${CONFIG_SERVER_USR}
+      - CONFIG_SERVER_PWD=${CONFIG_SERVER_PWD}
     depends_on:
       mongodb:
         condition: service_healthy
@@ -67,14 +55,11 @@ services:
 
   review:
     build: microservices/review-service
+    mem_limit: 512m
     environment:
       - SPRING_PROFILES_ACTIVE=docker,streaming_partitioned,streaming_instance_0
-    deploy:
-      resources:
-        limits:
-          memory: 512m
-        reservations:
-          memory: 512m
+      - CONFIG_SERVER_USR=${CONFIG_SERVER_USR}
+      - CONFIG_SERVER_PWD=${CONFIG_SERVER_PWD}
     depends_on:
       mysql:
         condition: service_healthy
@@ -83,14 +68,11 @@ services:
 
   review-p1:
     build: microservices/review-service
+    mem_limit: 512m
     environment:
       - SPRING_PROFILES_ACTIVE=docker,streaming_partitioned,streaming_instance_1
-    deploy:
-      resources:
-        limits:
-          memory: 512m
-        reservations:
-          memory: 512m
+      - CONFIG_SERVER_USR=${CONFIG_SERVER_USR}
+      - CONFIG_SERVER_PWD=${CONFIG_SERVER_PWD}
     depends_on:
       mysql:
         condition: service_healthy
@@ -99,26 +81,20 @@ services:
 
   product-composite:
     build: microservices/product-composite-service
+    mem_limit: 512m
     environment:
       - SPRING_PROFILES_ACTIVE=docker,streaming_partitioned
-    deploy:
-      resources:
-        limits:
-          memory: 512m
-        reservations:
-          memory: 512m
+      - CONFIG_SERVER_USR=${CONFIG_SERVER_USR}
+      - CONFIG_SERVER_PWD=${CONFIG_SERVER_PWD}
     depends_on:
       rabbitmq:
+        condition: service_healthy
+      auth-server:
         condition: service_healthy
 
   mongodb:
     image: mongo:6.0.4
-    deploy:
-      resources:
-        limits:
-          memory: 512m
-        reservations:
-          memory: 512m
+    mem_limit: 512m
     ports:
       - "27017:27017"
     command: mongod
@@ -130,12 +106,7 @@ services:
 
   mysql:
     image: mysql:8.0.32
-    deploy:
-      resources:
-        limits:
-          memory: 512m
-        reservations:
-          memory: 512m
+    mem_limit: 512m
     ports:
       - "3306:3306"
     environment:
@@ -150,7 +121,8 @@ services:
       retries: 60
 
   rabbitmq:
-    image: rabbitmq:3.12.2-management
+    image: rabbitmq:3.11.8-management
+    mem_limit: 512m
     ports:
       - 5672:5672
       - 15672:15672
@@ -159,47 +131,48 @@ services:
       interval: 5s
       timeout: 2s
       retries: 60
-    deploy:
-      resources:
-        limits:
-          memory: 512m
-        reservations:
-          memory: 512m
 
   eureka:
     build: spring-cloud/eureka-server
-    deploy:
-      resources:
-        limits:
-          memory: 512m
-        reservations:
-          memory: 512m
+    mem_limit: 512m
+    environment:
+      - SPRING_PROFILES_ACTIVE=docker
+      - CONFIG_SERVER_USR=${CONFIG_SERVER_USR}
+      - CONFIG_SERVER_PWD=${CONFIG_SERVER_PWD}
 
   gateway:
+    build: spring-cloud/gateway
+    mem_limit: 512m
     environment:
       - SPRING_PROFILES_ACTIVE=docker
-    build: spring-cloud/gateway
-    deploy:
-      resources:
-        limits:
-          memory: 512m
-        reservations:
-          memory: 512m
+      - CONFIG_SERVER_USR=${CONFIG_SERVER_USR}
+      - CONFIG_SERVER_PWD=${CONFIG_SERVER_PWD}
     ports:
       - "8443:8443"
+    depends_on:
+      auth-server:
+        condition: service_healthy
 
   auth-server:
+    build: spring-cloud/authorization-server
+    mem_limit: 512m
     environment:
       - SPRING_PROFILES_ACTIVE=docker
-    build: spring-cloud/authorization-server
-    deploy:
-      resources:
-        limits:
-          memory: 512m
-        reservations:
-          memory: 512m
+      - CONFIG_SERVER_USR=${CONFIG_SERVER_USR}
+      - CONFIG_SERVER_PWD=${CONFIG_SERVER_PWD}
     healthcheck:
-      test: [ "CMD", "curl", "-fs", "http://localhost:9999/actuator/health" ]
+      test: ["CMD", "curl", "-fs", "http://localhost:9999/actuator/health"]
       interval: 5s
       timeout: 2s
       retries: 60
+
+  config-server:
+    build: spring-cloud/config-server
+    mem_limit: 512m
+    environment:
+      - SPRING_PROFILES_ACTIVE=docker,native
+      - ENCRYPT_KEY=${CONFIG_SERVER_ENCRYPT_KEY}
+      - SPRING_SECURITY_USER_NAME=${CONFIG_SERVER_USR}
+      - SPRING_SECURITY_USER_PASSWORD=${CONFIG_SERVER_PWD}
+    volumes:
+      - $PWD/config-repo:/config-repo
