--- a/microservices/review-service/build.gradle
+++ b/microservices/review-service/build.gradle
@@ -39,6 +39,8 @@ dependencies {
 	implementation 'org.springframework.cloud:spring-cloud-starter-stream-rabbit'
 	implementation 'org.springframework.cloud:spring-cloud-starter-stream-kafka'
 	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
+	implementation 'org.springframework.cloud:spring-cloud-starter-config'
+	implementation 'org.springframework.retry:spring-retry'
 
 	runtimeOnly 'com.mysql:mysql-connector-j'
 	implementation "org.mapstruct:mapstruct:${mapstructVersion}"
