--- a/microservices/review-service/src/main/resources/application.yml
+++ b/microservices/review-service/src/main/resources/application.yml
@@ -1,157 +1,19 @@
-server:
-  port: 7003
-  error:
-    include-message: always
-logging:
-  level:
-    root: INFO
-    ru.aasmc: DEBUG
-    org.hibernate.sql: DEBUG
-    org.hibernate.type.descriptor.sql.BasicBinder: TRACE
-
-app:
-  eureka-username: u
-  eureka-password: p
-  eureka-server: localhost
-  auth-server: localhost
-
-eureka:
-  client:
-    serviceUrl:
-      defaultZone: "http://${app.eureka-username}:${app.eureka-password}@${app.eureka-server}:8761/eureka/"
-    initialInstanceInfoReplicationIntervalSeconds: 5
-    registryFetchIntervalSeconds: 5
-  instance:
-    leaseRenewalIntervalInSeconds: 5
-    leaseExpirationDurationInSeconds: 5
+spring.config.import: "configserver:"
 
 spring:
-  application:
-    name: review
-  jpa:
-    hibernate:
-      ddl-auto: update
-  datasource:
-    url: jdbc:mysql://localhost/review-db
-    username: user
-    password: pwd
-    hikari:
-      initialization-fail-timeout: 60000
-  cloud:
-    function:
-      definition: messageProcessor
-    stream:
-      default-binder: rabbit
-      default.contentType: application/json
-      bindings:
-        messageProcessor-in-0:
-          destination: reviews
-          group: reviewsGroup
-          consumer:
-            max-attempts: 3
-            back-off-initial-interval: 500
-            back-off-max-interval: 1000
-            back-off-multiplier: 2.0
-      rabbit:
-        bindings:
-          messageProcessor-in-0:
-            consumer:
-              auto-bind-dlq: true
-              republish-to-dlq: true
-      kafka:
-        bindings:
-          messageProcessor-in-0:
-            consumer:
-              enable-dlq: true
-        binder:
-          brokers: 127.0.0.1
-          defaultBrokerPort: 9092
-  rabbitmq:
-    host: 127.0.0.1
-    port: 5672
-    username: guest
-    password: guest
-
-management:
-  endpoint:
-    health:
-      show-details: always
-  endpoints:
-    web:
-      exposure:
-        include: "*"
+  application.name: review
+  cloud.config:
+    failFast: true
+    retry:
+      initialInterval: 3000
+      multiplier: 1.3
+      maxInterval: 10000
+      maxAttempts: 20
+    uri: http://localhost:8888
+    username: ${CONFIG_SERVER_USR}
+    password: ${CONFIG_SERVER_PWD}
 
 ---
-spring:
-  config:
-    activate:
-      on-profile: docker
-  datasource:
-    url: jdbc:mysql://mysql/review-db
-  rabbitmq:
-    host: rabbitmq
-  cloud:
-    stream:
-      kafka:
-        binder:
-          brokers: kafka
+spring.config.activate.on-profile: docker
 
-app:
-  eureka-server: eureka
-  auth-server: auth-server
-
-server:
-  port: 8080
-
----
-spring:
-  config:
-    activate:
-      on-profile: streaming_partitioned
-  cloud:
-    stream:
-      bindings:
-        messageProcessor-in-0:
-          consumer:
-            partitioned: true
-            instance-count: 2
----
-spring:
-  config:
-    activate:
-      on-profile: streaming_instance_0
-  cloud:
-    stream:
-      bindings:
-        messageProcessor-in-0:
-          consumer:
-            instance-index: 0
----
-spring:
-  config:
-    activate:
-      on-profile: streaming_instance_1
-  cloud:
-    stream:
-      bindings:
-        messageProcessor-in-0:
-          consumer:
-            instance-index: 1
----
-spring:
-  config:
-    activate:
-      on-profile: kafka
-  cloud:
-    stream:
-      default-binder: kafka
-      kafka:
-        binder:
-          replication-factor: 1
-  kafka:
-    bootstrap-servers: kafka:9092
-
-management:
-  health:
-    rabbit:
-      enabled: false
+spring.cloud.config.uri: http://config-server:8888
